--- a/src/demo/client.css
+++ b/src/demo/client.css
@@ -44,7 +44,6 @@ button {
   border: 3px solid var(--border-color);
   padding: 2px;
   margin: 3px;
-  margin-bottom: 20px;
   box-shadow: 0.5px 0.5px 0px 0 #1b1b2b;
   background-color: var(--main-bg-color);
   color: #FFFFFF;
@@ -143,12 +142,17 @@ input {
   justify-content: space-around;
 }
 
+
 #clientResponse {
-  font-size: 12px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--border-color);
-  padding: 5px;
-  border-radius: 5px;
+    border: 1px solid #666;
+    font-size: 10px;
+    padding: 5px;
+    min-height: 140px;
+    max-height: 140px;
+    margin-top: 3px;
+    overflow: hidden;
+}
+
+#clientResponse div:nth-child(odd) {
+    background: #444;
 }
