--- a/res/provider/ui/css/base.css
+++ b/res/provider/ui/css/base.css
@@ -59,22 +59,16 @@ ul, li {
     line-height: 18px;
     cursor: pointer;
     vertical-align: middle;
-}
-
-.close img {
-    cursor: pointer;
-}
-
-.group .close {
+    position: relative;
     right: 4px;
     text-align: center;
     border-radius: 18px;
     font-size: 10px;
-    background-color: #1F1F26;
+    background-color: #303038;
 }
 
 .close:hover {
-    background-color: #2A2A30;
+    background-color: #3a3a3a !important;
 }
 
 .group .header .title {
