--- a/src/provider/view/components/Header/Header.scss
+++ b/src/provider/view/components/Header/Header.scss
@@ -57,7 +57,7 @@
                 color: var(--secondary-text-color);
                 margin-right: 5px;
 
-                &.option {
+                &.sort-button {
                     cursor: pointer;
                     font-weight: 500;
 
