--- a/src/provider/view/styles/_variables.scss
+++ b/src/provider/view/styles/_variables.scss
@@ -1,11 +1,12 @@
-$accent-color: #e6683a;
+$accent-color: #FBC944;
 $accent-color-highlight: lighten(saturate($accent-color, 40%), 10%);
+$toast-max-height: 400px;
 
 :root {
     --accent-color: #{$accent-color};
     --accent-color-highlight: #{$accent-color-highlight};
-    --center-background-color: #313131;
-    --card-background-color: #484848;
+    --center-background-color: #373737;
+    --card-background-color: #424242;
     --card-border-color: #6E6E6E;
     --header-color: #121212;
     --primary-text-color: white;
