--- a/src/provider/view/containers/NotificationCenterApp/NotificationCenterApp.scss
+++ b/src/provider/view/containers/NotificationCenterApp/NotificationCenterApp.scss
@@ -1,7 +1,7 @@
 @import '../../styles/_variables.scss';
 
 .notification-center {
-    width: 388px;
+    width: $window-width;
     display: flex;
     flex-flow: column;
     height: 100%;
