--- a/src/provider/view/components/NotificationCard/NotificationCard.scss
+++ b/src/provider/view/components/NotificationCard/NotificationCard.scss
@@ -174,6 +174,7 @@
             &:hover {
                 transition: background-color 0.2s ease-in-out;
                 background-color: var(--accent-color);
+                text-shadow: #111 2px 1px 2px;
             }
 
             &:last-of-type {
