--- a/src/provider/view/styles/base.scss
+++ b/src/provider/view/styles/base.scss
@@ -47,5 +47,5 @@ body {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    word-wrap: none;
+    word-wrap: break-word;
 }
