--- a/src/provider/view/components/NotificationGroup/NotificationGroup.scss
+++ b/src/provider/view/components/NotificationGroup/NotificationGroup.scss
@@ -7,23 +7,59 @@
     position: sticky;
 
     &>.title {
+        position: relative;
+        font-size: 20px;
         color: var(--primary-text-color);
         text-transform: capitalize;
         padding: 6px 0;
-        font-size: 20px;
         margin-bottom: 5px;
+        width: 100%;
         display: flex;
         flex-direction: row;
-        width: 100%;
+        justify-content: space-between;
+        flex-wrap: nowrap;
 
-        span {
-            cursor: pointer;
-            width: 100%;
+        .app {
+            overflow: hidden;
+            position: relative;
+            flex-wrap: nowrap;
+            flex-direction: row;
+            align-content: space-between;
+            justify-content: flex-start;
+            flex: 1 1 150px;
+            flex-wrap: nowrap;
+
+            .name {
+                cursor: pointer;
+                display: inline-block;
+                flex: -1 1 150px;
+                flex-wrap: nowrap;
+                max-width: 320px;
+            }
+
+            .count {
+                flex: 1 1 1;
+                flex-direction: row;
+                position: relative;
+                text-align: center;
+                line-height: 12px;
+                font-size: 14px;
+                padding: 3px;
+                font-weight: 600;
+                display: inline-block;
+                color: var(--center-background-color);
+                background: var(--accent-color);
+                border-radius: 100px;
+                min-width: 18px;
+                height: 16px;
+                top: -8px;
+            }
         }
 
         .icon {
+            justify-self: right;
             margin-top: -5px;
-            align-self: center;
+            align-self: right;
             background: none;
 
             &:hover .image {
@@ -31,7 +67,6 @@
             }
         }
     }
-
 
     .notifications {
         list-style: none;
