--- a/src/provider/view/components/NotificationGroup/NotificationGroup.scss
+++ b/src/provider/view/components/NotificationGroup/NotificationGroup.scss
@@ -20,39 +20,40 @@
         flex-wrap: nowrap;
 
         .app {
-            overflow: hidden;
-            position: relative;
-            flex-wrap: nowrap;
+            display: flex;
             flex-direction: row;
             align-content: space-between;
-            justify-content: flex-start;
-            flex: 1 1 150px;
+            justify-content: center;
             flex-wrap: nowrap;
+            max-width: 300px;
 
             .name {
                 cursor: pointer;
                 display: inline-block;
-                flex: -1 1 150px;
+                flex: 1;
                 flex-wrap: nowrap;
-                max-width: 320px;
+                align-self: flex-start;
+                text-align: left;
             }
 
             .count {
-                flex: 1 1 1;
+                flex: 0 -1 0;
+                display: inline-block;
+                align-self: flex-end;
                 flex-direction: row;
                 position: relative;
                 text-align: center;
                 line-height: 12px;
                 font-size: 14px;
                 padding: 3px;
+                margin-left: 4px;
                 font-weight: 600;
-                display: inline-block;
                 color: var(--center-background-color);
                 background: var(--accent-color);
                 border-radius: 100px;
                 min-width: 18px;
                 height: 16px;
-                top: -8px;
+                top: -6px;
             }
         }
 
