--- a/src/provider/view/components/NotificationView/NotificationView.scss
+++ b/src/provider/view/components/NotificationView/NotificationView.scss
@@ -12,15 +12,17 @@
     overflow-x: hidden;
     overflow-y: scroll;
 
-    .placeholder {
+    .no-notes-message {
         position: fixed;
         color: #666;
-        margin: 20px auto;
+        top: 50%;
+        margin: 0 auto;
         width: 100%;
         text-align: center;
 
         h3 {
-            font-size: 24px;
+            font-size: 20px;
+            font-weight: 500;
         }
     }
 
