--- a/src/provider/view/components/NotificationCard/NotificationCard.scss
+++ b/src/provider/view/components/NotificationCard/NotificationCard.scss
@@ -135,7 +135,7 @@
                         background-color: var(--card-background-color);
                     }
 
-                    &.dismiss:hover {
+                    &.minimize:hover {
                         background-color: var(--secondary-text-color-highlight);
                     }
 
