--- a/src/provider/view/components/CircleButton/CircleButton.scss
+++ b/src/provider/view/components/CircleButton/CircleButton.scss
@@ -89,7 +89,7 @@ $minus: url('../../../../../res/provider/ui/image/shapes/Minus.svg');
         }
     }
 
-    &.dismiss {
+    &.minimize {
         .image {
             -webkit-mask: $minus;
             -webkit-mask-position: center center;
