--- a/src/provider/view/styles/animations.scss
+++ b/src/provider/view/styles/animations.scss
@@ -22,29 +22,7 @@
     }
 }
 
-@keyframes grow {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes fadeInLeft {
-    from {
-        opacity: 0;
-        transform: translate3d(-50%, 0, 0);
-    }
-
-    to {
-        opacity: 1;
-        transform: none;
-    }
-}
-
-@keyframes fadeOutLeft {
+@keyframes fadeOutRight {
     0% {
         opacity: 1;
         transform: translate3d(0, 0, 0);
