--- a/src/provider/view/components/Controls/Button/Button.scss
+++ b/src/provider/view/components/Controls/Button/Button.scss
@@ -50,6 +50,7 @@
             height: 16px;
             min-width: 16px;
             margin-right: 6px;
+            -webkit-user-drag: none;
         }
     }
 }
