--- a/src/provider/view/components/NotificationCard/NotificationCard.scss
+++ b/src/provider/view/components/NotificationCard/NotificationCard.scss
@@ -14,7 +14,6 @@
         box-shadow: 0px 0px 0px 1px var(--card-border-color);
 
         &:hover {
-
             box-shadow: 0px 0px 0px 2px var(--accent-color);
         }
     }
@@ -25,7 +24,7 @@
         }
     }
 
-    &.loading {
+    &.uninteractable {
         pointer-events: none;
     }
 
