Fix white edge on display scaling

--- a/src/provider/view/containers/ToastApp/ToastApp.scss
+++ b/src/provider/view/containers/ToastApp/ToastApp.scss
@@ -1,5 +1,10 @@
 @import '../../styles/variables';
 
+body,
+html {
+    background: var(--card-background-color);
+}
+
 #toast-container {
     background: var(--card-background-color);
     margin: 0;
