--- a/src/provider/view/containers/NotificationCenterApp/NotificationCenterApp.scss
+++ b/src/provider/view/containers/NotificationCenterApp/NotificationCenterApp.scss
@@ -1,5 +1,11 @@
 @import '../../styles/_variables.scss';
 
+
+body,
+html {
+    background: var(--center-background-color);
+}
+
 .notification-center {
     width: $window-width;
     display: flex;
