[SERVICE-876] Toggle-able and persistable autohide and do-not-disturb

--- a/src/provider/view/components/Header/Header.scss
+++ b/src/provider/view/components/Header/Header.scss
@@ -5,11 +5,11 @@
     color: var(--primary-text-color);
     user-select: none;
 
-    #lock-link {
+    .developmentOnly {
         visibility: hidden;
     }
 
-    &:hover #lock-link {
+    &:hover .developmentOnly {
         visibility: visible;
     }
 
