Initial design work - Match OFD style folder - Switch to generic render app functions - Remove clear all prompt - Setup panel router - Add module.scss declaration - Fix SVG & module.scss import - Add Settings svg icon - Move Notification Button to NotificationControls

--- a/src/provider/view/styles/base.scss
+++ b/src/provider/view/styles/base.scss
@@ -1,4 +1,4 @@
-@import './_variables.scss';
+@import './variables.scss';
 
 @font-face {
     font-family: "Nunito";
@@ -28,6 +28,13 @@ body {
         width: 100vw;
         height: 100vh;
     }
+}
+
+.notification-center {
+    width: $window-width;
+    display: flex;
+    flex-flow: column;
+    height: 100%;
 }
 
 #react-app {
