--- a/src/provider/view/components/CircleButton/CircleButton.scss
+++ b/src/provider/view/components/CircleButton/CircleButton.scss
@@ -1,4 +1,4 @@
-@import '../../styles/_variables.scss';
+@import '../../styles/variables.scss';
 @import '../../styles/animations.scss';
 
 [class^="icon-"],
