--- a/src/provider/view/components/FeedsView/FeedsView.module.scss
+++ b/src/provider/view/components/FeedsView/FeedsView.module.scss
@@ -42,6 +42,10 @@
             &>* {
                 cursor: pointer;
             }
+
+            .plus {
+                background-color: var(--color-blurred);
+            }
         }
 
         .middle {
