--- a/src/provider/view/components/SettingsView/SettingsView.module.scss
+++ b/src/provider/view/components/SettingsView/SettingsView.module.scss
@@ -43,4 +43,9 @@
             border-bottom: 1px solid var(--color-light);
         }
     }
+
+    .placeholder-text {
+        text-align: center;
+        margin: 30px 0;
+    }
 }
