More descriptive classname

--- a/src/provider/view/components/FeedsView/FeedsView.module.scss
+++ b/src/provider/view/components/FeedsView/FeedsView.module.scss
@@ -4,7 +4,7 @@
     background: var(--color-background-light);
     color: var(--color-light);
 
-    .placeholder-text {
+    .no-feeds-text {
         text-align: center;
         margin: 20% 0;
     }
